--- a/index.html
+++ b/index.html
@@ -82,23 +82,23 @@
                 </div>
                 <div class="sidebarContent">
                     <p>CATEGORIAS EXTRAS</p>
-                    <div>
+                    <div class="sidebarCard">
                         <img src="Imagens/bicicletas.jpg" alt="sidebarCardImg" class="sidebarCardImg">
                         <p class="sidebarCardTitle">BICICLETA</p>
                     </div>
-                    <div>
+                    <div class="sidebarCard">
                         <img src="Imagens/esportesNaNeve.jpg" alt="sidebarCardImg" class="sidebarCardImg">
                         <p class="sidebarCardTitle">ESPORTES DE FRIO</p>
                     </div>
-                    <div>
+                    <div class="sidebarCard">
                         <img src="Imagens/futebolAmericano.jpg" alt="sidebarCardImg" class="sidebarCardImg">
                         <p class="sidebarCardTitle">FUTEBOL AMERICANO</p>
                     </div>
-                    <div>
+                    <div class="sidebarCard">
                         <img src="Imagens/skate.jpg" alt="sidebarCardImg" class="sidebarCardImg">
                         <p class="sidebarCardTitle">SKATE</p>
                     </div>
-                    <div>
+                    <div class="sidebarCard">
                         <img src="Imagens/yoga.jpg" alt="sidebarCardImg" class="sidebarCardImg">
                         <p class="sidebarCardTitle">YOGA</p>
                     </div>
